--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
 
 # LOCAL
-DB_URL=postgres://postgres:123@localhost:5432/blog
+DATABASE_URL=postgres://postgres:123@localhost:5432/blog
 HOST=localhost
 PORT=5432
 DATABASE_NAME=blog
 USER_NAME=postgres
 PASSWORD=123
+
+
+SERVER_PORT=8090
