Updating Procfile for proper Hosting

--- a/ProcFile
+++ b/ProcFile
@@ -1,1 +1,1 @@
-web: go mod download 
+web: go mod download && go get -u github.com/go-task/task/v3/cmd/task && task migration  && task build && ./main
