Changing code so that env only load locally

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -16,7 +16,7 @@ tasks:
     silent: true
   run:
     cmds:
-      - go run ./cmd/server/main.go
+      - LOCAL=1 go run ./cmd/server/main.go
     silent: true
   build:
     cmds:
